# rustodo

./: Cargo.toml  README.md
src/: main.rs
src/commands/: add.rs  done.rs  edit.rs  list.rs  mod.rs  remove.rs
src/db/: mod.rs
src/models/: task.rs
