[package]
name = "rustodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.0"
colored = "2.0.0"
clap = { version = "3.1.6", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] } 
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }

